[tool.poetry]
name = "vaxbot"
version = "0.1.0"
description = ""
authors = ["Augusto Zanellato <augusto.zanellato@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
splinter = "^0.14.0"
selenium = "^3.141.0"
toml = "^0.10.2"
python-telegram-bot = "^13.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
